@@ -28,11 +28,13 @@ class GenerateTTFileDlg : public QDialog
 
 public:
     GenerateTTFileDlg(const HostEntry& entry, QWidget * parent = 0);
+    void exportTTFileToDirectory(const QString& dir);
 
 private:
     void slotSetupHotkey();
     void slotVideoCodecChange(int);
     void slotSaveTTFile();
+    void slotSaveAllTTFiles();
 
 private:
     void loadVideoFormats();
