@@ -132,6 +132,13 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QPushButton" name="expttButton">
+       <property name="text">
+        <string>&amp;Export Server list to .tt File</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
